[build-system]
requires = ["setuptools>=67.4.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cyclic-classes"
version = "0.0.2"
authors = [
    { name="Radoslaw Gryta", email="radek.gryta@gmail.com" },
]
description = "Allow creation of circular module dependencies between classes"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["python", "cyclic", "classes", "circular", "dependencies"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies", "optional-dependencies"]

[project.urls]
"Homepage" = "https://github.com/rgryta/Cyclic-Classes"
"Bug Tracker" = "https://github.com/rgryta/Cyclic-Classes/issues"

####### SETUPTOOLS #######

[tool.setuptools.package-dir]
"cyclic_classes" = "cyclic_classes"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = { dev = {file = ["requirements_dev.txt"]} }

####### BUMPV #######

[tool.bumpversion]
current_version = "0.0.2"
allow_dirty = true
commit = true
message = "[Version {new_version}]"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

####### BLACK #######

[tool.black]
line-length = 120
preview = true

####### COVERAGE #######

[tool.coverage.run]
source = ["cyclic_classes/"]

####### ISORT #######

[tool.isort]
profile = "black"
line_length = 120
length_sort = true
atomic = true

####### PYLINT #######

[tool.pylint.main]
disable = ["logging-fstring-interpolation"]
output-format = "colorized"

[tool.pylint.format]
max-line-length = 120

####### STAGING #######,

[tool.staging.steps]
# Lint
isort = { execute = "isort {flags} . tests", format = {flags = "flags"}}
black = { execute = "black {flags} . tests", format = {flags = "flags"}}
pylint = { execute = "pylint {package} tests tests/packages/**/cc_one tests/packages/**/cc_two", format = {package = "package"}}
noprint = { execute = "noprint -ve {package} tests", format = {package = "package"}}
# Test
coverage = { prepare = "coverage run -m pytest -xv tests", execute = "coverage report -m --fail-under=30", cleanup = "coverage erase"}

[tool.staging.stages.test]
description = "Test the package"
steps = [
    {step = "coverage"},
]

[tool.staging.stages.format]
description = "Reformat code"
steps = [
    {step = "isort"},
    {step = "black"},
]

[tool.staging.stages.lint]
description = "Check linting"
format = {flags="--check", package="cyclic_classes"}
steps = [
    {parallel = {steps = ["isort", "black", "pylint", "noprint"]}},
]
